# docs/v1/swagger.yaml
@@ -13,7 +13,7 @@ definitions:
       title:
         type: string
     type: object
-  dto.DebtResponse:
+  dto.DebtsResponse:
     properties:
       amount:
         description: Valor do débito
@@ -207,7 +207,7 @@ paths:
           description: Lista de débitos
           schema:
             items:
-              $ref: '#/definitions/dto.DebtResponse'
+              $ref: '#/definitions/dto.DebtsResponse'
             type: array
         "400":
           description: Parâmetros inválidos
